@@ -67,14 +67,14 @@ proc long_filenames { } {
     close $f
 
     if [is_remote host] {
-	set file1 [remote_download host $file1];
-	set file2 [remote_download host $file2];
+	set file1 [remote_download host $file1]
+	set file2 [remote_download host $file2]
 	set dest artest.a
     } else {
 	set dest tmpdir/artest.a
     }
 
-    remote_file host delete $dest;
+    remote_file host delete $dest
 
     set got [binutils_run $AR "rc $dest $file1 $file2"]
     if [is_remote host] {
@@ -90,7 +90,7 @@ proc long_filenames { } {
 	return
     }
 
-    remote_file host delete $dest;
+    remote_file host delete $dest
     set got [binutils_run $AR "rc $dest $file1 $file2"]
 
     if ![string match "" $got] {
@@ -102,15 +102,15 @@ proc long_filenames { } {
     remote_file build delete tmpdir/$n2
 
     set got [binutils_run $AR "t $dest"]
-    regsub "\[\r\n \t\]*$" "$got" "" got;
+    regsub "\[\r\n \t\]*$" "$got" "" got
     if ![string match "$n1*$n2" $got] {
 	fail $testname
 	return
     }
     
     if [is_remote host] {
-	remote_file host delete $file1;
-	remote_file host delete $file2;
+	remote_file host delete $file1
+	remote_file host delete $file2
     }
 
     verbose -log "$AR x $dest"
@@ -123,8 +123,8 @@ proc long_filenames { } {
     }
 
     if [is_remote host] {
-	remote_upload host $n1 tmpdir/$n1;
-	remote_upload host $n2 tmpdir/$n2;
+	remote_upload host $n1 tmpdir/$n1
+	remote_upload host $n2 tmpdir/$n2
 	set file1 tmpdir/$n1
 	set file2 tmpdir/$n2
     } else {
