@@ -36,8 +36,8 @@ if {![binutils_assemble $srcdir/$subdir/bintest.s tmpdir/bintest.o]} then {
 }
 
 if ![is_remote host] {
-    set tempfile tmpdir/bintest.o;
-    set copyfile tmpdir/copy;
+    set tempfile tmpdir/bintest.o
+    set copyfile tmpdir/copy
 } else {
     set tempfile [remote_download host tmpdir/bintest.o]
     set copyfile copy
@@ -55,14 +55,14 @@ if ![string match "" $got] then {
     if [is_remote host] {
 	set src1 tmpdir/bintest.o
 	set src2 tmpdir/copy.o
-	remote_upload host $tempfile $src1;
-	remote_upload host ${copyfile}.o $src2;
+	remote_upload host $tempfile $src1
+	remote_upload host ${copyfile}.o $src2
     } else {
 	set src1 ${tempfile}
 	set src2 ${copyfile}.o
     }
-    set status [remote_exec build cmp "${src1} ${src2}"];
-    set exec_output [lindex $status 1];
+    set status [remote_exec build cmp "${src1} ${src2}"]
+    set exec_output [lindex $status 1]
     set exec_output [prune_warnings $exec_output]
 
     # On some systems the result of objcopy will not be identical.
@@ -120,8 +120,8 @@ if ![string match "" $got] then {
     fail "objcopy -O srec"
 } else {
     if [is_remote host] {
-	remote_upload host ${srecfile} tmpdir/copy.srec;
-	set srecfile tmpdir/copy.srec;
+	remote_upload host ${srecfile} tmpdir/copy.srec
+	set srecfile tmpdir/copy.srec
     }
     set file [open ${srecfile} r]
 
@@ -332,7 +332,7 @@ proc strip_test { } {
 
     if [is_remote host] {
 	set archive libstrip.a
-	set objfile [remote_download host tmpdir/testprog.o];
+	set objfile [remote_download host tmpdir/testprog.o]
 	remote_file host delete $archive
     } else {
 	set archive tmpdir/libstrip.a
@@ -359,7 +359,7 @@ proc strip_test { } {
     }
 
     if [is_remote host] {
-	set objfile [remote_download host tmpdir/testprog.o];
+	set objfile [remote_download host tmpdir/testprog.o]
     } else {
 	set objfile tmpdir/testprog.o
     }
@@ -400,7 +400,7 @@ proc strip_test_with_saving_a_symbol { } {
     }
 
     if [is_remote host] {
-	set objfile [remote_download host tmpdir/testprog.o];
+	set objfile [remote_download host tmpdir/testprog.o]
     } else {
 	set objfile tmpdir/testprog.o
     }
@@ -437,14 +437,14 @@ proc copy_setup { } {
     global gcc_gas_flag
     global test_prog
     
-    set res [build_wrapper testglue.o];
-    set flags { debug };
+    set res [build_wrapper testglue.o]
+    set flags { debug }
     
     if { $res != "" } {
-	lappend flags "additional_flags=[lindex $res 1]";
-	set add_libs "testglue.o";
+	lappend flags "additional_flags=[lindex $res 1]"
+	set add_libs "testglue.o"
     } else {
-	set add_libs "";
+	set add_libs ""
     }
 
     if { [istarget *-*-linux*] } {
@@ -456,8 +456,8 @@ proc copy_setup { } {
 	return 2
     }
 
-    set result [remote_load target tmpdir/$test_prog];
-    set status [lindex $result 0];
+    set result [remote_load target tmpdir/$test_prog]
+    set status [lindex $result 0]
 
     if { $status != "pass"  } {
 	perror "unresolved setup, status = $status"
@@ -473,13 +473,13 @@ proc copy_executable { prog flags test1 test2 } {
     global test_prog
 
     if [is_remote host] {
-	set testfile [remote_download host tmpdir/$test_prog];
+	set testfile [remote_download host tmpdir/$test_prog]
 	set testcopy copyprog
     } else {
 	set testfile tmpdir/$test_prog
 	set testcopy tmpdir/copyprog
     }
-    remote_file host delete $testcopy;
+    remote_file host delete $testcopy
 
     set exec_output [binutils_run $prog "$flags $testfile $testcopy"]
 
@@ -494,7 +494,7 @@ proc copy_executable { prog flags test1 test2 } {
     }
 
     set status [remote_exec build "cmp" "tmpdir/$test_prog tmpdir/copyprog"]
-    set exec_output [lindex $status 1];
+    set exec_output [lindex $status 1]
 
     if [string match "" $exec_output] then {
 	pass $test1
@@ -527,7 +527,7 @@ proc copy_executable { prog flags test1 test2 } {
     }
 
     set output [remote_load target tmpdir/copyprog]
-    set status [lindex $output 0];
+    set status [lindex $output 0]
     if { $status != "pass" } {
 	fail $test2
     } else {
@@ -543,7 +543,7 @@ proc strip_executable { prog flags test } {
 
     remote_download build tmpdir/copyprog tmpdir/striprog
     if [is_remote host] {
-	set copyfile [remote_download host tmpdir/striprog];
+	set copyfile [remote_download host tmpdir/striprog]
     } else {
 	set copyfile tmpdir/striprog
     }
@@ -555,11 +555,11 @@ proc strip_executable { prog flags test } {
     }
 
     if [is_remote host] {
-	remote_upload host ${copyfile} tmpdir/striprog;
+	remote_upload host ${copyfile} tmpdir/striprog
     }
 
     set result [remote_load target tmpdir/striprog]
-    set status [lindex $result 0];
+    set status [lindex $result 0]
     if { $status != "pass" } {
 	fail $test
         return
@@ -581,7 +581,7 @@ proc strip_executable_with_saving_a_symbol { prog flags test } {
 
     remote_download build tmpdir/copyprog tmpdir/striprog
     if [is_remote host] {
-	set copyfile [remote_download host tmpdir/striprog];
+	set copyfile [remote_download host tmpdir/striprog]
     } else {
 	set copyfile tmpdir/striprog
     }
@@ -593,11 +593,11 @@ proc strip_executable_with_saving_a_symbol { prog flags test } {
     }
 
     if [is_remote host] {
-	remote_upload host ${copyfile} tmpdir/striprog;
+	remote_upload host ${copyfile} tmpdir/striprog
     }
 
     set result [remote_load target tmpdir/striprog]
-    set status [lindex $result 0];
+    set status [lindex $result 0]
     if { $status != "pass" } {
 	fail $test
         return
