@@ -245,16 +245,16 @@ proc readelf_wi_test {} {
     }
 
     # Download it.
-    set tempfile [remote_download host tmpdir/testprog.o];
+    set tempfile [remote_download host tmpdir/testprog.o]
 
     # Run "readelf -wi" on it.
     send_log "exec $READELF $READELFFLAGS -wi $tempfile > readelf.out\n"
     catch "exec $READELF $READELFFLAGS -wi $tempfile > readelf.out" got
 
     # Upload the results.
-    set output [remote_upload host readelf.out];
+    set output [remote_upload host readelf.out]
 
-    file_on_host delete $tempfile;
+    file_on_host delete $tempfile
     
     # Strip any superflous warnings.
     set got [prune_readelf_wi_warnings $got]
@@ -296,7 +296,7 @@ proc readelf_wi_test {} {
 	}
     }
 
-    file_on_host delete $output;
+    file_on_host delete $output
     
     # All done.
     pass "readelf -wi"
@@ -326,7 +326,7 @@ if {![binutils_assemble $srcdir/$subdir/bintest.s tmpdir/bintest.o]} then {
 }
 
 if ![is_remote host] {
-    set tempfile tmpdir/bintest.o;
+    set tempfile tmpdir/bintest.o
 } else {
     set tempfile [remote_download host tmpdir/bintest.o]
 }
