@@ -73,7 +73,7 @@ foreach res $res_list {
 	}
 	if [regexp "\[xp\]fail *(\[^ \]*)" $line junk sys] {
 	    setup_xfail $sys
-	    continue;
+	    continue
 	}
     }
 
@@ -88,7 +88,7 @@ foreach res $res_list {
 	send_log "$err\n"
 	verbose "$err" 1
 	fail "windres/$broot (parse)"
-	continue;
+	continue
     }
     pass "windres/$broot (parse)"
 
@@ -100,15 +100,15 @@ foreach res $res_list {
 	if [regexp "parse-only" $line] {
 	    file delete "tmpdir/$broot.res"
 	    set done 1
-	    break;
+	    break
 	}
 	if [regexp "\[xc\]fail *(\[^ \]*)" $line junk sys] {
 	    setup_xfail $sys
-	    continue;
+	    continue
 	}
     }
     if { $done != 0 } {
-	continue;
+	continue
     }
 
     if { "$broot" != "bmpalign" && "$target_xfail" == "yes" } {
@@ -122,7 +122,7 @@ foreach res $res_list {
 	send_log "$err\n"
 	verbose "$err" 1
 	fail "windres/$broot (compare)"
-	continue;
+	continue
     }
 
     set pat [open "$sroot.rsd"]
@@ -134,11 +134,11 @@ foreach res $res_list {
 	set outline [oneline $out]
 
 	if ![string match $patline $outline] {
-	    send_log "< $patline\n";
-	    send_log "> $outline\n";
-	    fail "windres/$broot (compare)";
+	    send_log "< $patline\n"
+	    send_log "> $outline\n"
+	    fail "windres/$broot (compare)"
 	    set done 1
-	    break;
+	    break
 	}
     }
     if { $done == 0 } {
