@@ -23,7 +23,7 @@
 
 proc binutil_version { prog } {
     if ![is_remote host] {
-	set path [which $prog];
+	set path [which $prog]
 	if {$path == 0} then {
 	    perror "$prog can't be run, file not found."
 	    return ""
@@ -31,8 +31,8 @@ proc binutil_version { prog } {
     } else {
 	set path $prog
     }
-    set state [remote_exec host $prog --version];
-    set tmp "[lindex $state 1]\n";
+    set state [remote_exec host $prog --version]
+    set tmp "[lindex $state 1]\n"
     # Should find a way to discard constant parts, keep whatever's
     # left, so the version string could be almost anything at all...
     regexp "\[^\n\]* (cygnus-|)(\[-0-9.a-zA-Z-\]+)\[\r\n\].*" "$tmp" version cyg number
@@ -69,7 +69,7 @@ proc default_binutils_run { prog progargs } {
     regsub -all "\\$" "$progargs" "\\$" progargs
 
     set state [remote_exec host $prog $progargs]
-    set exec_output [prune_warnings [lindex $state 1]];
+    set exec_output [prune_warnings [lindex $state 1]]
     if {![string match "" $exec_output]} then {
 	send_log "$exec_output\n"
 	verbose "$exec_output"
@@ -95,11 +95,11 @@ proc default_binutils_assemble { source object } {
         set sed_file $srcdir/config/hppa.sed
 	send_log "sed -f $sed_file < $source > asm.s\n"
 	verbose "sed -f $sed_file < $source > asm.s"
-	catch "exec sed -f $sed_file < $source > asm.s";
+	catch "exec sed -f $sed_file < $source > asm.s"
 	set source asm.s
     }
 
-    set exec_output [target_assemble $source $object ""];
+    set exec_output [target_assemble $source $object ""]
     set exec_output [prune_warnings $exec_output]
 
     if [string match "" $exec_output] {
