@@ -1,3 +1,12 @@
+2004-05-12  Ben Elliston  <bje@au.ibm.com>
+
+	* binutils-all/ar.exp: Remove stray semicolons.
+	* binutils-all/dlltool.exp: Likewise.
+	* binutils-all/objcopy.exp: Likewise.
+	* binutils-all/readelf.exp: Likewise.
+	* binutils-all/windres/windres.exp: Likewise.
+	* lib/utils-lib.exp: Likewise.
+
 2004-04-14  Richard Sandiford  <rsandifo@redhat.com>
 
 	* binutils-all/readelf.ss-mips: Allow named section symbols.
